# easyBragg

./: .gitmodules  CMakeLists.txt  INSTALL.md  README.md  build.sh  example.py  pyproject.toml  setup.cfg
doc/: index.md
